alterações projeto-android
nessa alteração arrumei alguns itens visuais

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
      <article>
          <h1 id="Home">Historia do mascote do android</h1>
           <p id="paragrafo"> Provavelmente você sabe que o sistema   operacional 
-              <a href="https://pt.wikipedia.org/wiki/Android" target="_blank "rel="external">Android🔗</a>, mantido pelo <a href="https://pt.wikipedia.org/wiki/Google#:~:text=A%20empresa%20foi%20fundada%20por,  19%20de%20agosto%20de%202004." target="_blank "rel="external">Google🔗</a> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas  tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
+              <a class="link" href="https://pt.wikipedia.org/wiki/Android" target="_blank "rel="external">Android🔗</a>, mantido pelo <a class="link" href="https://pt.wikipedia.org/wiki/Google#:~:text=A%20empresa%20foi%20fundada%20por,  19%20de%20agosto%20de%202004." target="_blank "rel="external">Google🔗</a> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas  tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
          
          <h2>A primeira Versão</h2>
          <p id="paragrafo" >
               A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado 
-              <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank" rel="external">Dan Morrill🔗</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank" rel="external">Inkscape🔗</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
+              <a class="link" href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank" rel="external">Dan Morrill🔗</a>. Ele conta que abriu o <a class="link" href="https://inkscape.org/pt-br/" target="_blank" rel="external">Inkscape🔗</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
          </p>
          <div class="imagens">
               <picture> 
@@ -47,11 +47,11 @@
          </p>
          <div class="imagens">
               <picture>
-                 <source media="(max-width:750px )" srcset="imagens/irina-blok-pq.jpg" type="image/jpg"> <img src="imagens/irina-blok.jpg"type="image/jpg"  alt="Foto Irina">
+                 <source media="(max-width:700px )" srcset="imagens/irina-blok-pq.jpg" type="image/jpg"> <img src="imagens/irina-blok.jpg"type="image/jpg"  alt="Foto Irina">
               </picture>
          </div>
           <p id="paragrafo">
-              A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <a href="https://www.tecmundo.com.br/android/46241-android-a-historia-da-logo-do-robozinho-mais-famoso-do-mundo-ilustracao-.htm" target="_blank" rel="external">Bugdroid🔗</a>, o novo mascote do Android.
+              A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <a class="link" href="https://www.tecmundo.com.br/android/46241-android-a-historia-da-logo-do-robozinho-mais-famoso-do-mundo-ilustracao-.htm" target="_blank" rel="external">Bugdroid🔗</a>, o novo mascote do Android.
           </p>
          <div class="imagens">
              <img src="imagens/bugdroid.png" alt="Imagem Android com homem">
@@ -120,14 +120,14 @@
                          Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
                      </p>
                      <p id="paragrafo">
-                         Acesse aqui o site <a href="https://www.android.com/intl/pt-BR_br/history/"target="_blank" rel="external">Android History🔗</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
+                         Acesse aqui o site <a class="link" href="https://www.android.com/intl/pt-BR_br/history/"target="_blank" rel="external">Android History🔗</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
                      </p>
                   </p>
                   <br>
                 
            </aside>
             <p id="paragrafo">
-                Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <a href="https://pt.wikipedia.org/wiki/Android" target="_blank " rel="external">Android🔗</a> e seu simpático mascote.
+                Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <a class="link" href="https://pt.wikipedia.org/wiki/Android" target="_blank " rel="external">Android🔗</a> e seu simpático mascote.
             </p>
      </article>
 
